@@ -17,6 +17,8 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
   * SequencerUtil.pm: Fix use of uninitialized variable warning.
   * Dh_Lib.pm: Properly error out on paragraphs missing the Package
     field (rather than silently ignoring them).
+  * debian/rules: Fix call to gen-provides that seemed to work more
+    due to luck than by design.
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
